[package]
name = "shogi-img"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.8", default-features = false, features = ["png"] }
shogi_core = "0.1.5"

[dev-dependencies]
resvg = "0.37.0"
