[package]
name = "shogi-img"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.8", default-features = false, features = ["png"] }
imageproc = { version = "0.23.0", default-features = false }
rusttype = "0.9.3"
shogi_core = "0.1.5"

[dev-dependencies]
image = { version = "0.24.8", default-features = false, features = ["png"] }
resvg = "0.37.0"
