[package]
name = "shogi-img"
version = "0.2.0"
authors = ["sugyan <sugi1982+github@gmail.com>"]
edition = "2021"
description = "library for generating images that visualize the position in Shogi (Japanese chess)"
documentation = "https://docs.rs/shogi-img"
readme = "../README.md"
repository = "https://github.com/sugyan/shogi-img"
license = "MIT"
keywords = ["shogi"]

[dependencies]
image = { version = "0.24.8", default-features = false, features = ["png"] }
imageproc = { version = "0.23.0", default-features = false }
rusttype = "0.9.3"
shogi_core = "0.1.5"
